Add Movie responses from network (dto) and mappers for them. Set up MovieApiService interface

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,8 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
+        buildConfigField("String", "API_KEY", API_KEY)
+
 
         testInstrumentationRunner "com.rradzzio.chooseamovie.HiltTestRunner"
     }
